Refactor `ImageHelper` to improve scaling methods and replace custom logic with `Thumbnailator`
- Replaced `getFirstScaledInstance` and other scaling methods with `Thumbnailator` usage for better image resizing.
- Updated `ImageHelper` to leverage `Thumbnailator` for `scaleToMaxDim` and `adjustImageSize` functions.
- Replaced Javadoc with `///` comments for consistency.
- Removed redundant methods and adjusted dependent classes (`ImagePalette`, `KartePane`) to use updated `ImageHelper`.
- Added `Thumbnailator` to project dependencies.